# drone_control

./: .gitmodules  README.md  command.sh  config.txt  wifi.service  wifi.sh
camera_info/: imx219__base_soc_i2c0mux_i2c_1_imx219_10_800x600.yaml
script/: ble.service  ble.sh  bluetooth.service  camera.service  camera.sh  dds.service  geoland.sh  geoland_server.service  tracker.service  tracker.sh  video.service  video.sh  wifi.sh
src/action_geoland_interfaces/: CMakeLists.txt  README.md  package.xml
src/action_geoland_interfaces/action/: GeoLand.action
src/aruco_tracker/: ArucoTracker.cpp  ArucoTracker.hpp
src/aruco_tracker/cfg/: params.yaml
src/ble/: package.xml  setup.cfg  setup.py
src/ble/ble/: ble_node.py
src/ble/script/: aruco_tracker.service  ble.service  ble.sh  camera.service  camera.sh  geoland.sh  geoland_server.service  tracker.sh  video.service  video.sh
src/geoland_server/: CMakeLists.txt  README.md  package.xml
src/geoland_server/src/: geoland_action_server.cpp  geoland_action_server.hpp
